--- a/docker/config.template.json
+++ b/docker/config.template.json
@@ -183,8 +183,8 @@
   ],
   "CLOUD189_ACCOUNT_LIST": [
     {
-      "cloud189_phone": "18888xxxxxx",
-      "cloud189_password": "Sitoi"
+      "cloud189_phone": "18146006384",
+      "cloud189_password": "312037"
     },
     {
       "cloud189_phone": "多账号 手机号填写，请参考上面",
